<resources>
    <string name="app_name">Watch4BPM</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>

    <string name="measureNowButton">Measure puls</string>
    <string name="measurementServiceButtonStart">Start measurement service</string>
    <string name="measurementServiceButtonStop">Stop measurement service</string>
    <string name="toastMeasuringServiceStart">Measuring service started!</string>
    <string name="toastMeasuringServiceStop">Measuring service stopped!</string>
    <string name="statisticButton">Statistic</string>
    <string name="maxHeartbeat">Max heart rate</string>
    <string name="minHeartbeat">Min heart rate</string>
    <string name="avgHeartbeat">Average heart rate</string>
    <string name="lastHeartbeat">Last measurement</string>
    <string name="openStatisticsOnPhoneButton">Open statistics on phone</string>
    <string name="stoppedMeasurement">Heart beat measurement stopped on Watch</string>

    <string name="openWearAppButton">Open Wear App</string>
    <string name="exitAppButton">Exit</string>
    <string name="fetchNewData">Update data</string>
    <string name="buttonSettings">Settings</string>
    <string name="chooseLang">Choose language: </string>
</resources>
